# kea-hook-dynamic-lifetime

./: .gitignore  CMakeLists.txt  LICENSE  README.md  go.mod
.github/workflows/: build.yaml
main/kea_hook_dynamic_lifetime/: main.go
src/: config.cpp  config.h  main.cpp
